# VOST

./: CNAME  README.md  code.html  data.html  index.html  workshop.html
aot_plus/: Makefile  README.md  train_vost.sh
aot_plus/configs/: default.py  pre.py  pre_vost.py  pre_ytb.py
aot_plus/configs/models/: default.py
aot_plus/dataloaders/: eval_datasets.py  train_datasets.py
aot_plus/docker/: Dockerfile
aot_plus/networks/engines/: aot_engine.py
aot_plus/networks/layers/: basic.py  loss.py  transformer.py
aot_plus/networks/managers/: evaluator.py  trainer.py
aot_plus/networks/models/: aot.py
aot_plus/tools/: eval.py  train.py
aot_plus/utils/: checkpoint.py  image.py
evaluation/: README.md  evaluation_method.py  setup.cfg
evaluation/source/: dataset.py  evaluation.py  metrics.py  results.py
figs/: bibtex.txt
