[metadata]
name = evaluation
version = attr: evaluation.__version__
description = Evaluation Framework for Semi-supervised VOS
long_description = file: README.md
long_description_content_type = text/markdown
keywords = segmentation
license = GPL v3
author = Sergi Caelles
author-email = scaelles@vision.ee.ethz.ch
home-page = https://github.com/davisvideochallenge/davis2017-evaluation
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Scientific/Engineering :: Human Machine Interfaces
        Topic :: Software Development :: Libraries
        Topic :: Software Development :: Libraries :: Python Modules
